	the `xreg' argument.  There is a new argument `fixed' to allow
	some of the parameters to be held fixed.

   o	library() now checks the dependence on R version (if any) and
	warns if the package was built under a later version of R.

   o	warning() has new argument `call.', like stop()'s.

   o	zip.file.extract() is no longer provisional and has an
	"internal" method available on all platforms.


DEPRECATED & DEFUNCT

    o	.Alias, reshapeLong(), reshapeWide() are defunct.


DOCUMENTATION CHANGES

    o	`Writing R Extensions' now has an example of calling R's
	random numbers from FORTRAN via C.


UTILITIES

    o	Sweave(), Stangle() and friends in package tools. Sweave allows
	mixing latex documentation and R code in a single source file:
	the R code can be replaced by its output (text, figures) to
	allow automatic report generation.

    o	Rdconv can convert to the S4 .sgml format. 
	[Still under development.]


C-LEVEL FACILITIES

    o	findInterval(xt[],n,x,...) gives the index (or interval number)
	of x in the sorted sequence xt[].  There's an
	F77_SUB(interv)(.) to be called from Fortran; this used to be
	part of predict.smooth.spline's underlying Fortran code.

    o	Substitutes for (v)snprintf will be used if the OS does not
	supply one, so tests for HAVE_(V)SNPRINTF are no longer needed.

    o	The DUP and NAOK arguments in a .C() call are not passed on
	to the native routine being invoked.  Any code that relied on
	the old behaviour will need to be modified.

    o	log1p is only provided in Rmath.h if it is not provided by the
	platform, in which case its name is not remapped, but a
	back-compatibility entry point Rf_log1p is provided.
	Applications using libRmath may need to be re-compiled.

    o	The methods used by optim() have entry points in R_ext/Applic.h
	and have a more general interface.  This has been done for
	future internal use, and they should not yet be regarded as
	part of the API.


BUG FIXES
