@@ -82,7 +82,9 @@ NEW FEATURES
    o	warning() has new argument `call.', like stop()'s.
 
    o	zip.file.extract() is no longer provisional and has an
-	"internal" method available on all platforms.
+	"internal" method available on Unix-alikes and Windows.
+
+   o	New read-only connections to zip files via unz().
 
 
 DEPRECATED & DEFUNCT
